radio and rating

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -31,4 +31,6 @@ img {
 
 // adding components 
 
+@import "./radio/radio";
+@import "./rating/rating";
 @import "./room-search-form/room-search-form";
