--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -7,6 +7,7 @@ $dark-shade-25: rgba(31, 32, 65, .25);
 $dark-shade-5: rgba(31, 32, 65, .05);
 $purple: #BC9CFF;
 $green: #6FCF97;
+$white: #FFF;
 
 // typography 
 
