--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,10 +1,10 @@
 // colors
 
-$dark-shade-100: #1F2041;
-$dark-shade-75: rgba(31, 32, 65, .75);
-$dark-shade-50: rgba(31, 32, 65, .5);
-$dark-shade-25: rgba(31, 32, 65, .25);
-$dark-shade-5: rgba(31, 32, 65, .05);
+$dark-shade100: #1F2041;
+$dark-shade75: rgba(31, 32, 65, 0.75);
+$dark-shade50: rgba(31, 32, 65, 0.5);
+$dark-shade25: rgba(31, 32, 65, 0.25);
+$dark-shade5: rgba(31, 32, 65, 0.05);
 $purple: #BC9CFF;
 $green: #6FCF97;
 $white: #FFF;
@@ -13,7 +13,7 @@ $white: #FFF;
 
 $main-font: 'Quicksand', sans-serif;
 $secondary-font: 'Montserrater', sans-serif;
-$font-color: $dark-shade-100;
+$font-color: $dark-shade100;
 
 $h1: (
   font-family: $main-font,
@@ -21,7 +21,8 @@ $h1: (
   font-weight: bold,
   font-size: 24px,
   line-height: 30px,
-  color: $font-color
+  color: $font-color,
+  text-transform: none
 );
 
 $h2: (
@@ -30,7 +31,8 @@ $h2: (
   font-weight: bold,
   font-size: 19px,
   line-height: 24px,
-  color: $font-color
+  color: $font-color,
+  text-transform: none
 );
 
 $h3: (
@@ -49,7 +51,8 @@ $body: (
   font-weight: normal,
   font-size: 14px,
   line-height: 24px,
-  color: $dark-shade-75
+  color: $dark-shade75,
+  text-transform: none
 );
 
 $placeholder: (
@@ -58,7 +61,8 @@ $placeholder: (
   font-weight: normal,
   font-size: 14px,
   line-height: 18px,
-  color: $dark-shade-25
+  color: $dark-shade25,
+  text-transform: none
 );
 
 @mixin typography ($font-family, $font-style, $font-weight, $font-size, $line-height, $color, $text-transform){
@@ -67,7 +71,7 @@ $placeholder: (
   font-weight: $font-weight;
   font-size: $font-size;
   line-height: $line-height;
-  color: $font-color;
+  color: $color;
   text-transform: $text-transform;
 }
 
