--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -29,8 +29,19 @@ img {
   max-width: 100%; 
 }
 
+.container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 // adding components 
 
 @import "./radio/radio";
 @import "./rating/rating";
 @import "./room-search-form/room-search-form";
+
+
+@import "./footer/footer";
