button, toggle, header

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -9,6 +9,8 @@ $purple: #BC9CFF;
 $green: #6FCF97;
 $white: #FFF;
 
+$purple-bgc: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$green-bgc: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 // typography 
 
 $main-font: 'Quicksand', sans-serif;
