--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -21,12 +21,12 @@
       </li>
     </ul>
     @@include('button/index.html', {
-      'class': 'nav-button button--white',
-      'text': 'войти'
+      "class": "button nav-button button--white",
+      "text": "войти"
     })
     @@include('button/index.html', {
-      'class': 'nav-button button--purple',
-      'text': 'зарегистрироваться'
+      "class": "button nav-button button--purple",
+      "text": "зарегистрироваться"
     })
   </nav>
 </header>
