--- a/src/components/radio/index.html
+++ b/src/components/radio/index.html
@@ -1,4 +1,7 @@
-<label class="radio">
-  <input type="radio" class="radio__input">
-  <span class="radio__checkmark"></span>
-</label>
+<div class="radio @@class">
+  <label class="radio__label">
+    <input type="radio" class="radio__input" name="@@name" value="@@value">
+    <span class="radio__checkmark"></span>
+    <span class="radio__text">@@text</span>
+  </label>
+</div>
