--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -8,6 +8,7 @@ $dark-shade5: rgba(31, 32, 65, 0.05);
 $purple: #BC9CFF;
 $green: #6FCF97;
 $white: #FFF;
+$black: #000; 
 
 $purple-bgc: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 $green-bgc: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
