--- a/src/components/radio/_radio.scss
+++ b/src/components/radio/_radio.scss
@@ -1,18 +1,21 @@
 .radio {
-  margin-bottom: 5px;
-  margin-top: 5px;
-  width: 20px;
-  height: 20px;
-  
 
+  &__label {
+    margin-bottom: 5px;
+    margin-top: 5px;
+
+    display: inline-flex;
+    align-items: center;
+  }
+  
   &__input {
     appearance: none;
   }
 
   &__checkmark {
-    display: block;
     width: 20px;
     height: 20px;
+    margin-right: 10px;
     background-color: transparent;
     border: transparent;
     border-radius: 50%;
@@ -20,11 +23,21 @@
     transition: box-shadow .4s ease-in-out;
     cursor: pointer;
   }
+  
+  &__text {
+    text-transform: capitalize;
+    color: $dark-shade50;
+
+    transition: color .4s ease-in-out;
+  }
 
   &__input:checked + &__checkmark {
     box-shadow: inset 0 0 0 1px $purple,
                 inset 0 0 0 3px $white,
                 inset 0 0 0 10px $purple;
-    
+  }
+
+  &__input:checked ~ &__text {
+    color: $dark-shade75;
   }
 }
