--- a/src/components/toggle/_toggle.scss
+++ b/src/components/toggle/_toggle.scss
@@ -2,6 +2,13 @@
   position: relative;
   display: flex;
   align-items: center;
+
+  &__text {
+    margin-left: 50px;
+    color: $dark-shade25;
+
+    transition: color .4s ease-in-out;
+  }
   
   &__input {
     appearance: none;
@@ -38,10 +45,9 @@
     &:checked::after {
       border-color: $purple;
     }
-  }
 
-  &__text {
-    margin-left: 50px;
-    color: $dark-shade25;
+    &:checked ~ .toggle__text {
+      color: $dark-shade75;
+    }
   }
 }
