--- a/src/components/toggle/index.html
+++ b/src/components/toggle/index.html
@@ -1,4 +1,4 @@
-<div class="toggle">
+<div class="toggle @@class">
   <label class="toggle__label">
     <input type="checkbox" class="toggle__input">
     <span class="toggle__text">Получать спецпредложения</span>
